--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "ostream": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "cout",
+        "endl"
+    ]
 }
